--- a/src/common/css/common.less
+++ b/src/common/css/common.less
@@ -20,8 +20,8 @@ h1, h2, h3, h4, h5 {
 //特殊字体
 @font-face {
   font-family: 'pang';
-  src: url('../common/font/pang.ttf') format('eot');/*IE*/
-  src: url('../common/font/pang.ttf') format('woff'), url('../common/font/pang.ttf') format('truetype');/*non-IE*/
+  src: url('../../common/fonts/pang.ttf') format('eot');/*IE*/
+  src: url('../../common/fonts/pang.ttf') format('woff'), url('../../common/fonts/pang.ttf') format('truetype');/*non-IE*/
 }
 
 // 修改滚动条样式
