增加作者介绍板块

--- a/src/common/components/ListItem/ListItem.less
+++ b/src/common/components/ListItem/ListItem.less
@@ -1,7 +1,9 @@
 @themeColor: #347fff;
 
 .list-item{
+  border-bottom: 1px solid #dce2ea;
   padding: 10px 0;
+
   cursor: pointer;
   &:hover{
     .item-info1{
