--- a/src/pages/Home/Home.less
+++ b/src/pages/Home/Home.less
@@ -7,8 +7,12 @@
 
 .home-content{
   width: 800px;
-  .home-content-blog{
+  .home-content-blog, .home-content-read{
     margin-bottom: 20px;
+    >h2{
+        font-weight: bold;
+        color: #5a6584;
+    }
   }
 }
 .home-side{
