--- a/src/App.less
+++ b/src/App.less
@@ -1,24 +1,24 @@
 @import '~antd/dist/antd.css';
-@import "./common/css/common.less";
-@import "./common/css/constant.less";
+@import './common/css/common.less';
+@import './common/css/constant.less';
 
-.app-header{
+.app-header {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
   height: 60px;
   background-color: @themeColor;
-  .app-header-box{
+  .app-header-box {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 1120px;
   }
-  .app-header-logo{
+  .app-header-logo {
     display: flex;
     align-items: baseline;
-    >h2{
+    > h2 {
       margin-right: 10px;
       font-size: 34px;
       line-height: 34px;
@@ -26,37 +26,42 @@
       font-family: pang;
     }
   }
-  .app-header-nav{
-    >ul{
+  .app-header-nav {
+    width: 200px;
+    > ul {
       display: flex;
       align-items: center;
-      >li{
+      border-bottom: none;
+      background-color: transparent;
+      > li {
         display: flex;
         align-items: center;
         margin-left: 4px;
+        height: 36px;
         padding: 4px 10px;
         border-radius: 4px;
         font-size: 16px;
-        color: #ffffff;
+        color: #fff;
         border: 1px solid transparent;
         cursor: pointer;
-        &:hover{
+        &:hover {
           border: 1px solid #ffffff;
+          color: #fff;
         }
-        &.active{
+        &.active {
           border: 1px solid #ffffff;
           font-weight: bold;
           background-color: #ffffff;
           color: @themeColor;
-          .link{
+          .link {
             color: @themeColor;
           }
         }
-        .icon{
+        .icon {
           font-size: 18px;
           margin-right: 4px;
         }
-        .link{
+        .link {
           color: #ffffff;
         }
       }
@@ -64,10 +69,10 @@
   }
 }
 
-.app-content{
+.app-content {
   display: flex;
   justify-content: center;
-  .app-content-box{
+  .app-content-box {
     width: 1120px;
   }
 }
